# async-graphql-sqlx-example

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  db.sqlite  db.sqlite3  fly.toml
src/: graphql.rs  main.rs  result.rs  todo.rs  web.rs
