[package]
name = "lite"
version = "0.1.0"
authors = ["Dan Bruder <danb@structionsite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.3.5", default-features=false, features = ["sqlite", "uuid", "bigdecimal", "chrono", "runtime-tokio", "macros"] }
serde = "1.0.110"
serde_json = "1.0.53"
chrono = "0.4.11"
uuid = { version = "0.8.1", features = ["v4"]}
bigdecimal = "0.1.2"
sqlx-core ={ version = "0.3.5", default-features=false, features = ["sqlite", "uuid", "bigdecimal", "chrono"] }
dotenv = "0.15.0"
async-graphql = "1.12.2"
tokio = { version = "0.2.20", features = ["full"]}
async-graphql-warp = "1.4.2"
thiserror = "1.0.16"
warp = "0.2.2"
futures = "0.3.5"
# Needed for sqlite.
libsqlite3-sys = { version = "*", features = ["bundled"] }
